--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>FXHASH project</title>
+    <title>New fxhash project</title>
+    <link rel="icon" href="./favicon.ico" />
     <meta charset="utf-8" />
     <script id="fxhash-snippet">
       //---- do not edit the following code (you can indent as you wish)
@@ -54,6 +55,7 @@
     <!-- if you need to import js scripts do it here -->
   </head>
   <body>
+    <img id="loading" src="./loading.gif" />
     <!-- WEBPACK will inject the bundle.js here -->
   </body>
 </html>
